includes/ts_ck_entity_embed_browser.css
.ts-ck-entity-embed-loading {
    text-align: center;
}

.contextual-links-wrapper,
.view-filters,
.view-content,
.pager {
    display: none;
}

.view-content .views-view-grid tr {
    vertical-align: text-top !important;
}

.view-content .views-view-grid td {
    vertical-align: top;
}

.view-content .ts-ck-entity-embed-browser-entity {
    border: 2px solid #f1f1f1;
    padding: 2px;
    min-height: 210px;
    min-width: 200px;
    max-height: 210px;
    min-width: 200px;
    overflow: hidden;
    padding: 10px;
    text-align: center;
}

.view-content .ts-ck-entity-embed-browser-entity div {
    margin: 10px auto 10px auto;
}

.view-content .ts-ck-entity-embed-browser-entity img {
    max-width: 100%;
}

.view-content .ts-ck-entity-embed-selected-entity {
    border: 4px solid #0c8689;
}

.ts-ck-entity-embed-entity-preview .ts-ck-entity-embed-center {
  text-align: center;
  margin: 0 auto;
}

.views-exposed-form .views-exposed-widget {
    display: inline-block;
    margin-right: 20px;
}

.views-exposed-form .views-exposed-widget input,
.views-exposed-form .views-exposed-widget select {
    margin-top: 5px;
}

ul.pager {
    padding-left: 0;
}

ul.pager li {
    display: inline-block;
    list-style-type: none;
}

.element-invisible {
    display: none;
}

